platform/infrastructure/configs/dev/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
    app.kubernetes.io/part-of: ethereum-validator-platform
    platform.galaxy-lab/secret-consumer: database
    platform.galaxy-lab/environment: dev
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: signing
  labels:
    app.kubernetes.io/part-of: ethereum-validator-platform
    platform.galaxy-lab/secret-consumer: signing
    platform.galaxy-lab/environment: dev
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: ethereum
  labels:
    app.kubernetes.io/part-of: ethereum-validator-platform
    platform.galaxy-lab/secret-consumer: engine
    platform.galaxy-lab/environment: dev
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
